--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0"
   },
