--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-dom": "19.1.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.60.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
